syntax = "proto3";
package pendulumlabs.market.market;

import "gogoproto/gogo.proto";
import "market/params.proto";
import "market/pool.proto";
import "market/drop.proto";
import "market/member.proto";
import "market/burnings.proto";
import "market/order.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "market/x/market/types";

// GenesisState defines the market module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Pool poolList = 2 [(gogoproto.nullable) = false];
  repeated Drop dropList = 3 [(gogoproto.nullable) = false];
  repeated Member memberList = 4 [(gogoproto.nullable) = false];
  repeated Burnings burningsList = 5 [(gogoproto.nullable) = false];
  repeated Order orderList = 6 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
