syntax = "proto3";
package pendulumlabs.market.market;

import "gogoproto/gogo.proto";

option go_package = "market/x/market/types";
option (gogoproto.goproto_stringer_all) = true;
option (gogoproto.goproto_getters_all) = false;

message Order {
  uint64 uid = 1; 
  string owner = 2; 
  string status = 3; 
  string orderType = 4; 
  string denomAsk = 5; 
  string denomBid = 6; 
  string amount = 7 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];  
  repeated string rate = 8 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  uint64 prev = 9;
  uint64 next = 10;
  int64 beg_time = 11;
  int64 upd_time = 12;
}

message Orders {
  repeated uint64 uids = 1;
}

message OrderResponse {
  uint64 uid = 1; 
  string owner = 2; 
  string status = 3; 
  string orderType = 4; 
  string denomAsk = 5; 
  string denomBid = 6; 
  string amount = 7;  
  repeated string rate = 8;
  uint64 prev = 9;
  uint64 next = 10;
  int64 beg_time = 11;
  int64 upd_time = 12;
}
